--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-qr-reader": "^3.0.0-beta-1",
     "react-scripts": "5.0.1",
+    "socket.io-client": "^4.5.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
